<resources>
    <string name="app_name">PeriodicTable</string>
    <string name="lanthanides">Lanthanides</string>
    <string name="lanthanides_range">57–71</string>
    <string name="actinides">Actinides</string>
    <string name="actinides_range">89–103</string>
    <string name="elemenent_name">Element :</string>
    <string name="element_category">Category :</string>
    <string name="element_appereance">Appereance :</string>
    <string name="element_discoverer">Discoverer :</string>
    <string name="element_namer">Named by :</string>
    <string name="element_mass">Atomic Mass :</string>
    <string name="element_density">Density :</string>
    <string name="element_boil">Boils At :</string>
    <string name="element_melt">Melts At :</string>
    <string name="element_phase">Phase :</string>
    <string name="element_description">Description</string>
</resources>
